--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 /.bundle/
-/.yardoc
-/.idea
-/Gemfile.lock
-/_yardoc/
 /coverage/
 /doc/
+/*.gem
+/Gemfile.lock
+/.idea
 /pkg/
 /spec/reports/
 /tmp/
 /vendor/ruby/
+/.yardoc
+/_yardoc/
